# ClinicalTrialEnv

./: .gitignore  Dockerfile  README.md  SPACES_README.md  failed_json.txt  inference.py  openenv.yaml  output3.txt  output5.txt  output6.txt  output7.txt  output8.txt  output_final.txt  output_final_read.txt  pyproject.toml  requirements.txt  server.py  validate.py
env/: data_generator.py  environment.py  grader.py  models.py
server/: app.py
tests/: test_env.py
