[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "clinical-trial-env"
version = "1.0.0"
description = "OpenEnv RL environment for clinical trial protocol deviation detection"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.30.6",
    "pydantic==2.8.2",
    "openai==1.40.0",
    "requests==2.32.3",
    "pyyaml==6.0.2",
]

[project.scripts]
serve = "server:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["env*"]
